--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </nav>
-            <div class="header-bpdy">
+            <div class="header-body">
                 <div>
                     <h1>
                         <span>Black</span> <br>
