--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </head>
 <body>
     <header>
-
         <main>
-
             <nav>
                 <a href="index.html" class="brand">
                     <span>U</span>
@@ -82,10 +80,25 @@
                 </span> <br>
                 14 Rasstore
             </h1>
-
         </main>
-
     </header>
+
+    <section class="about">
+        <div class="container">
+            <div class="mains">
+                <img src="uphone.png" alt="">
+            </div>
+            <div class="about-grid"></div>
+            <div class="about-info">
+                <div class="subheading">About</div>
+                <h1 class="heading">About UPhone</h1>
+                <p class="texts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum molestiae exercitationem accusantium voluptates at blanditiis id distinctio dolorum et laboriosam.</p>
+                <div class="cta">
+                    <a href="#" class="btn">Contact Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
